; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopac.c_m68k_op_asl_16_s.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopac.c_m68k_op_asl_16_s.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DY = common dso_local global i32 0, align 4
@REG_IR = common dso_local global i32 0, align 4
@FLAG_N = common dso_local global i32 0, align 4
@FLAG_Z = common dso_local global i32 0, align 4
@FLAG_C = common dso_local global i32 0, align 4
@FLAG_X = common dso_local global i32 0, align 4
@m68ki_shift_16_table = common dso_local global i32* null, align 8
@FLAG_V = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_asl_16_s() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* @DY, i32** %1, align 8
  %5 = load i32, i32* @REG_IR, align 4
  %6 = ashr i32 %5, 9
  %7 = sub nsw i32 %6, 1
  %8 = and i32 %7, 7
  %9 = add nsw i32 %8, 1
  store i32 %9, i32* %2, align 4
  %10 = load i32*, i32** %1, align 8
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @MASK_OUT_ABOVE_16(i32 %11)
  store i32 %12, i32* %3, align 4
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* %2, align 4
  %15 = shl i32 %13, %14
  %16 = call i32 @MASK_OUT_ABOVE_16(i32 %15)
  store i32 %16, i32* %4, align 4
  %17 = load i32*, i32** %1, align 8
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @MASK_OUT_BELOW_16(i32 %18)
  %20 = load i32, i32* %4, align 4
  %21 = or i32 %19, %20
  %22 = load i32*, i32** %1, align 8
  store i32 %21, i32* %22, align 4
  %23 = load i32, i32* %4, align 4
  %24 = call i32 @NFLAG_16(i32 %23)
  store i32 %24, i32* @FLAG_N, align 4
  %25 = load i32, i32* %4, align 4
  store i32 %25, i32* @FLAG_Z, align 4
  %26 = load i32, i32* %3, align 4
  %27 = load i32, i32* %2, align 4
  %28 = sub nsw i32 8, %27
  %29 = ashr i32 %26, %28
  store i32 %29, i32* @FLAG_C, align 4
  store i32 %29, i32* @FLAG_X, align 4
  %30 = load i32*, i32** @m68ki_shift_16_table, align 8
  %31 = load i32, i32* %2, align 4
  %32 = add nsw i32 %31, 1
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds i32, i32* %30, i64 %33
  %35 = load i32, i32* %34, align 4
  %36 = load i32, i32* %3, align 4
  %37 = and i32 %36, %35
  store i32 %37, i32* %3, align 4
  %38 = load i32, i32* %3, align 4
  %39 = icmp eq i32 %38, 0
  br i1 %39, label %49, label %40

40:                                               ; preds = %0
  %41 = load i32, i32* %3, align 4
  %42 = load i32*, i32** @m68ki_shift_16_table, align 8
  %43 = load i32, i32* %2, align 4
  %44 = add nsw i32 %43, 1
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds i32, i32* %42, i64 %45
  %47 = load i32, i32* %46, align 4
  %48 = icmp eq i32 %41, %47
  br label %49

49:                                               ; preds = %40, %0
  %50 = phi i1 [ true, %0 ], [ %48, %40 ]
  %51 = xor i1 %50, true
  %52 = zext i1 %51 to i32
  %53 = shl i32 %52, 7
  store i32 %53, i32* @FLAG_V, align 4
  ret void
}

declare dso_local i32 @MASK_OUT_ABOVE_16(i32) #1

declare dso_local i32 @MASK_OUT_BELOW_16(i32) #1

declare dso_local i32 @NFLAG_16(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
